[tool.poetry]
name = "mhabit-python-scripts"
version = "0.1.0"
description = "Python scripts for mhabit project"
authors = ["Fries_I23"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"